# sbpl-release

./: .hg_archival.txt  .hgtags  0001-Added-install-rule-for-package.xml.patch  0001-add-install-rule-for-package.xml.patch  CMakeLists.txt  README.md  bloom.conf  catkin.conf  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  sbpl-config.cmake.in  stack.xml  stack.yaml  tracks.yaml
CMakeModules/: CPackSettings.cmake  CompilerSettings.cmake  InstallPkgConfigFile.cmake
debian/: changelog  control  copyright  gbp.conf  rules
hydro/: package.xml
indigo/: package.xml
kinetic/: package.xml
rpm/: ros-indigo-sbpl.spec  ros-jade-sbpl.spec  ros-kinetic-sbpl.spec  ros-melodic-sbpl.spec  ros-noetic-sbpl.spec  template.spec
