<package>
  <name>sbpl</name>
  <version>1.1.3</version>
  <description>Search-based Planning Library (SBPL)</description>
  <author email="maxim@cs.cmu.edu">Max Likhachev</author>
  <maintainer email="gjones@willowgarage.com">E. Gil Jones</maintainer>
  <license>BSD</license>

  <url>http://www.ros.org/wiki/sbpl</url>

  <build_depend>catkin</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend>ros_comm</build_depend>

  <run_depend>ros_comm</run_depend>

</package>
